Flow of Control
Added loops, several new functions, wrote the days of the week, the day numbers and the opponent schedule to the page.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       Author: 
       Date:   
 
-      Filename: calendar.htm
+      Filename: index.html
    -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -202,6 +202,7 @@
             <p>Tipton Turbines Baseball &bull; Tipton, Iowa</p>
         </footer>
     </div>
+    <script src="tt.js"></script>
 </body>
 
 </html>
